--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.2",
   "description": "Menubar app for ping logging",
   "dependencies": {
-    "menubar": "*"
+    "menubar": "*",
+    "request": "^2.61.0"
   },
   "devDependencies": {
     "electron-packager": "^5.0.1",
